cmake_minimum_required(VERSION 3.22)
project(Algorithms_and_Data_Structures C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/work/bin)

add_executable(lab00ex01 lab00/ex01/lab00ex01.c)
add_executable(lab00ex02 lab00/ex02/lab00ex02.c)

add_executable(lab01ex01 lab01/ex01/lab01ex01.c)
add_executable(lab01ex02 lab01/ex02/lab01ex02.c)
add_executable(lab01ex03 lab01/ex03/lab01ex03.c)

